@@ -37,7 +37,7 @@
 <div class="boxcontent">
 
 <form name="form" action="./" method="post">
-<roundcube:object name="loginform" form="form" />
+<roundcube:object name="loginform" form="form" autocomplete="off" />
 
 <p style="text-align:center;"><input type="submit" class="button" value="<roundcube:label name='login' />" /></p>
 
